k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-analytics-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: analytics.local
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: go-analytics-service
                port:
                  number: 8080
